--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "wizzy-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "grommet": "^2.25.0",
     "grommet-icons": "^4.7.0",
     "react": "^18.2.0",
