--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grommet-icons": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-spritesheet": "^2.3.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
