--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "grommet": "^2.25.0",
     "grommet-icons": "^4.7.0",
+    "luxon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-spritesheet": "^2.3.9",
