--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "grommet": "^2.25.0",
     "grommet-icons": "^4.7.0",
     "luxon": "^3.0.1",
