--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grommet-icons": "^4.7.0",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-router-dom": "^6.3.0",
