--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.1",
     "grommet": "^2.25.0",
     "grommet-icons": "^4.7.0",
     "luxon": "^3.0.1",
+    "next": "^12.2.3",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-twitter-login": "^1.5.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "test": "next test",
+    "eject": "next eject"
   },
   "eslintConfig": {
     "extends": [
