add heroku postbuild

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dev": "next dev",
     "start": "next start -p $PORT",
     "build": "next build",
+    "heroku-postbuild": "npm run build",
     "test": "next test",
     "eject": "next eject"
   },
